--- a/src/Home.css
+++ b/src/Home.css
@@ -1,3 +1,5 @@
+
+
 .home-container {
   position: relative;
   height: 100vh;
@@ -10,6 +12,7 @@
   align-items: center;
   color: #fff;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  
 }
 
 .overlay {
@@ -18,7 +21,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.5); /* koyu yarı saydam katman, yazı okunabilirliği için */
+background-color: rgba(0, 0, 0, 0.5); /* koyu yarı saydam katman, yazı okunabilirliği için */
   z-index: 1;
 }
 
@@ -84,4 +87,6 @@
     width: 100%;
     min-width: unset;
   } */
+   
 }
+
