şimdi arka planlar falan daha iyi ama tam bitmedi öğretmen tamamdır sınıf tamamdır ama öğrencinin css kısmında eksiklikleri var login, register düzenlenecek o kısmına kadar gelindi ve sınıf metodunda table değişiklikleri tamamlandı test edildi

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ html, body, #root {
 
   background-image: url('./menu.png');
   background-size: cover;
-  background-position: center;
+  background-position: center 10%; /* veya center 50px */
   background-repeat: no-repeat;
   
   height: 100vh;
@@ -29,6 +29,7 @@ html, body, #root {
   padding: 0;
   overflow: hidden;
 }
+
 
 /* Menü */
 nav {
@@ -59,3 +60,4 @@ nav button {
   padding: 10px 20px;
   font-size: 18px;
 }
+
