--- a/src/Home.css
+++ b/src/Home.css
@@ -3,7 +3,8 @@
 .home-container {
   position: relative;
   height: 100vh;
-  background-size: cover;
+  background-size: 100% auto;
+
   background-position: center;
   background-repeat: no-repeat;
 
