--- a/src/Components/teacher.css
+++ b/src/Components/teacher.css
@@ -1,5 +1,5 @@
 .page-background {
-  background-image: url('./arkaplan.jpg');
+  background-image: url('./arkaplan.png');
   background-size: cover;
   background-position: center top;
   background-repeat: no-repeat;
