--- a/src/Components/Student.css
+++ b/src/Components/Student.css
@@ -1,5 +1,5 @@
 .page-background {
-  background-image: url('./arkaplan.jpg');
+  background-image: url('./arkaplan.png');
   background-size: cover;
   background-position: center top;
   background-repeat: no-repeat;
@@ -31,3 +31,9 @@ nav {
   margin: 0;
   padding: 0;
 }
+.title-box {
+  
+  color: black;            
+ 
+}
+
