--- a/src/Home.css
+++ b/src/Home.css
@@ -27,7 +27,10 @@ background-color: rgba(0, 0, 0, 0.5); /* koyu yarı saydam katman, yazı okunabi
 }
 
 .menu-content {
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   z-index: 2;
   text-align: center;
   max-width: 400px;
@@ -36,6 +39,7 @@ background-color: rgba(0, 0, 0, 0.5); /* koyu yarı saydam katman, yazı okunabi
   border-radius: 12px;
   box-shadow: 0 0 20px rgba(0,0,0,0.3);
 }
+
 
 .menu-content h1 {
   font-size: 3rem;
